--- a/webrtcapp/views/call.html
+++ b/webrtcapp/views/call.html
@@ -37,15 +37,38 @@
 	</nav>
 
 	<main class="container" id="app">
-		<h1>peerJs MediaConnection</h1>
-		<div>
-			My peer ID is: {{ myPeerId }}
-		</div>
-		<div v-show="uiState.showConnectForm">
-			<input type="text" v-model="connectToPeerId">
-			<button @click="callPeer">call</button>
-		</div>
-		<button v-show="uiState.showCloseCallButton" @click="closeCall">close</button>
+		<section class="my-2 text-center container">
+			<div class="row py-lg-5">
+				<div class="col-lg-6 col-md-12 mx-auto">
+					<h1 class="fw-light">call for peerjs</h1>
+					<p class="lead">My peer ID is: {{ myPeerId }}</p>
+					<div v-show="uiState.connected" class="row">
+						<p class="lead">connect peer ID is: {{ connectToPeerId }}</p>
+					</div>
+
+					<form v-show="uiState.showConnectForm">
+						<div class="mb-3">
+							<div class="input-group">
+								<div class="input-group-text">connect peer ID is: </div>
+								<input type="text" class="form-control" v-model="connectToPeerId">
+								<button type="button" class="btn btn-primary" @click="callPeer">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+										<path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+									</svg>
+								</button>
+							</div>
+						</div>
+					</form>
+					<button v-show="uiState.showCloseCallButton" @click="closeCall">close</button>
+				</div>
+			</div>
+		</section>
+
+
+
+
+
+
 		<div v-show="uiState.showMyVideo">
 			<h2>my video</h2>
 			<video id="myVideo"></video>
@@ -65,7 +88,8 @@
 					showConnectForm: true,
 					showMyVideo: false,
 					showOtherVideo: false,
-					showCloseCallButton: false
+					showCloseCallButton: false,
+					connected: false
 				},
 				myPeerId: '',
 				connectToPeerId: '',
@@ -104,6 +128,7 @@
 							app.uiState.showOtherVideo = true;
 							app.uiState.showConnectForm = false;
 							app.uiState.showCloseCallButton = true;
+							app.uiState.connected = true;
 						});
 					}).catch(e => {
 						console.log(e)
@@ -114,6 +139,7 @@
 						app.uiState.showOtherVideo = false;
 						app.uiState.showConnectForm = true;
 						app.uiState.showCloseCallButton = false;
+						app.uiState.connected = false;
 					});
 				});
 			},
@@ -127,6 +153,7 @@
 						app.uiState.showOtherVideo = true;
 						app.uiState.showConnectForm = false;
 						app.uiState.showCloseCallButton = true;
+						app.uiState.connected = true;
 					});
 				},
 				closeCall: function(){
@@ -135,6 +162,7 @@
 					this.uiState.showOtherVideo = false;
 					this.uiState.showConnectForm = true;
 					this.uiState.showCloseCallButton = false;
+					this.uiState.connected = false;
 				},
 			}
 		})
