setting connect to peer id

--- a/webrtcapp/views/call.html
+++ b/webrtcapp/views/call.html
@@ -117,6 +117,8 @@
 				});
 				this.peer.on('call', (call) => {
 					app.otherVideo = document.getElementById("otherVideo");
+					app.connectToPeerId = call.peer;
+
 					navigator.mediaDevices.getUserMedia({
 						video: true,
 						audio: false,
