--- a/webrtcapp/views/rtcdatachannel.html
+++ b/webrtcapp/views/rtcdatachannel.html
@@ -4,31 +4,61 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>WebRTC RTCDataChannel</title>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<style>
+		.bd-placeholder-img {
+			font-size: 1.125rem;
+			text-anchor: middle;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			user-select: none;
+		}
+
+		@media (min-width: 768px) {
+			.bd-placeholder-img-lg {
+				font-size: 3.5rem;
+			}
+		}
+
+		body {
+			padding-top: 5rem;
+		}
+	</style>
 </head>
 <body>
-	<p>RTCDataChannel</p>
-	<div>
-		<button id="connectButton">
-			Connect
-		</button>
-		<button id="disconnectButton" disabled>
-			Disconnect
-		</button>
-	</div>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">WebRTC</a>
+		</div>
+	</nav>
 
-	<div class="messagebox">
-		<label for="message">
-			Enter a message:
-			<input type="text" name="message" id="message" placeholder="Message text" disabled>
-		</label>
-		<button id="sendButton" disabled>
-			Send
-		</button>
-	</div>
-	<div class="messagebox" id="receivebox">
-		<p>Messages received:</p>
-	</div>
+	<main class="container">
+		<p>RTCDataChannel</p>
+		<div>
+			<button id="connectButton">
+				Connect
+			</button>
+			<button id="disconnectButton" disabled>
+				Disconnect
+			</button>
+		</div>
 
+		<div class="messagebox">
+			<label for="message">
+				Enter a message:
+				<input type="text" name="message" id="message" placeholder="Message text" disabled>
+			</label>
+			<button id="sendButton" disabled>
+				Send
+			</button>
+		</div>
+		<div class="messagebox" id="receivebox">
+			<p>Messages received:</p>
+		</div>
+	</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script>
 (function() {
 
