--- a/webrtcapp/views/rtcdatachannel.html
+++ b/webrtcapp/views/rtcdatachannel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>WebRTC RTCDataChannel</title>
+	<title>A simple RTCDataChannel sample</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<style>
@@ -34,15 +34,24 @@
 	</nav>
 
 	<main class="container">
-		<p>RTCDataChannel</p>
-		<div>
-			<button id="connectButton">
-				Connect
-			</button>
-			<button id="disconnectButton" disabled>
-				Disconnect
-			</button>
-		</div>
+		<section class="my-2 text-center container">
+			<div class="row py-lg-5">
+				<div class="col-lg-6 col-md-12 mx-auto">
+					<h1 class="fw-light">A simple RTCDataChannel sample</h1>
+					<form>
+						<div class="mb-3">
+							<button id="connectButton" class="btn btn-primary" type="button">
+								Connect
+							</button>
+							<button id="disconnectButton" class="btn btn-light" type="button" disabled>
+								Disconnect
+							</button>
+						</div>
+					</form>
+
+				</div>
+			</div>
+		</section>
 
 		<div class="messagebox">
 			<label for="message">
