fix message form

--- a/webrtcapp/views/rtcdatachannel.html
+++ b/webrtcapp/views/rtcdatachannel.html
@@ -57,11 +57,10 @@
 				<div class="col-lg-6 col-md-12 mx-auto">
 					<form>
 						<div class="mb-3">
-							<label for="message" class="form-label">Enter a message</label>
-							<input type="text" name="message" id="message" placeholder="Message text" class="form-control" disabled>
-						</div>
-						<div class="mb-3">
-							<button id="sendButton" class="btn btn-primary" type="button" disabled>Send</button>
+							<div class="input-group">
+								<input type="text" name="message" id="message" placeholder="Message text" class="form-control" disabled>
+								<button id="sendButton" class="btn btn-primary" type="button" disabled>Send</button>
+							</div>
 						</div>
 					</form>
 				</div>
