--- a/webrtcapp/views/camera.html
+++ b/webrtcapp/views/camera.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>WebRTC camera</title>
+	<title>Taking still photos with WebRTC</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<style>
@@ -28,15 +28,32 @@
 
 </head>
 <body>
-	<p>WEBカメラ</p>
-	<div>
-		<video id="video"></video>
-		<button onclick="takepicture()">take photo</button>
-		<button onclick="clearphoto()">clear photo</button>
-	</div>
-	<div>
-		<img id="photo">
-	</div>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">WebRTC</a>
+		</div>
+	</nav>
+
+	<main class="container">
+		<section class="my-2 text-center container">
+			<div class="row py-lg-5">
+				<div class="col-lg-6 col-md-12 mx-auto">
+					<h1 class="fw-light">Taking still photos with WebRTC</h1>
+					<div class="mb-3">
+						<video id="video"></video>
+					</div>
+					<div class="mb-3">
+						<button onclick="takepicture()" class="btn btn-primary">take photo</button>
+						<button onclick="clearphoto()" class="btn btn-light">clear photo</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div>
+			<img id="photo">
+		</div>
+	</main>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script>
