--- a/webrtcapp/views/camera.html
+++ b/webrtcapp/views/camera.html
@@ -39,10 +39,10 @@
 			<div class="row py-lg-5">
 				<div class="col-lg-6 col-md-12 mx-auto">
 					<h1 class="fw-light">Taking still photos with WebRTC</h1>
-					<div class="mb-3">
+					<div class="my-3">
 						<video id="video"></video>
 					</div>
-					<div class="mb-3">
+					<div class="my-3">
 						<button onclick="takepicture()" class="btn btn-primary">take photo</button>
 						<button onclick="clearphoto()" class="btn btn-light">clear photo</button>
 					</div>
