--- a/webrtcapp/views/camera.html
+++ b/webrtcapp/views/camera.html
@@ -37,22 +37,33 @@
 	<main class="container">
 		<section class="my-2 text-center container">
 			<div class="row py-lg-5">
-				<div class="col-lg-6 col-md-12 mx-auto">
-					<h1 class="fw-light">Taking still photos with WebRTC</h1>
-					<div class="my-3">
-						<video id="video"></video>
+				<h1 class="fw-light">Taking still photos with WebRTC</h1>
+				<div class="my-3">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="card">
+								<div class="card-header">
+									camera
+								</div>
+								<video id="video"></video>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="card">
+								<div class="card-header">
+									photo
+								</div>
+								<img id="photo">
+							</div>
+						</div>
 					</div>
-					<div class="my-3">
-						<button onclick="takepicture()" class="btn btn-primary">take photo</button>
-						<button onclick="clearphoto()" class="btn btn-light">clear photo</button>
-					</div>
+				</div>
+				<div class="my-3">
+					<button onclick="takepicture()" class="btn btn-primary">take photo</button>
+					<button onclick="clearphoto()" class="btn btn-light">clear photo</button>
 				</div>
 			</div>
 		</section>
-
-		<div>
-			<img id="photo">
-		</div>
 	</main>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
