--- a/webrtcapp/views/call_for_peerjs.html
+++ b/webrtcapp/views/call_for_peerjs.html
@@ -33,6 +33,21 @@
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">WebRTC</a>
+
+			<div class="collapse navbar-collapse">
+				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">link list</a>
+						<ul class="dropdown-menu" aria-labelledby="dropdown01">
+							<li><a class="dropdown-item" href="/taking_still_photos_with_WebRTC">Taking still photos with WebRTC</a></li>
+							<li><a class="dropdown-item" href="/a_simple_rtcdatachannel_sample">A simple RTCDataChannel sample</a></li>
+							<li><a class="dropdown-item" href="/chat_for_peerjs">chat for peerjs</a></li>
+							<li><a class="dropdown-item active" href="/call_for_peerjs">call for peerjs</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+
 		</div>
 	</nav>
 
