--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -50,9 +50,28 @@
 	</nav>
 
 	<main class="container">
-		<section class="my-2 text-center container">
+		<section class="my-2 container">
 			<div class="row py-lg-5">
-				<h1 class="fw-light">WebRTC</h1>
+				<h1 class="fw-light text-center">WebRTC</h1>
+
+				<div class="row row-cols-1 row-cols-md-2 g-4">
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Taking still photos with WebRTC</h5>
+								<p class="card-text">
+									Use WebRTC to access the camera on a computer. Implemented by referring to WebRTC Tutorials
+									<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos" target="_blank">
+										Taking still photos with WebRTC
+									</a>
+								</p>
+								<a href="/taking_still_photos_with_WebRTC" class="card-link">demo page</a>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+
 			</div>
 		</section>
 	</main>
