--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -69,7 +69,22 @@
 							</div>
 						</div>
 					</div>
-					
+
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">A simple RTCDataChannel sample</h5>
+								<p class="card-text">
+									Use RTCDataChannel interface. Implemented by referring to WebRTC Tutorials
+									<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Simple_RTCDataChannel_sample" target="_blank">
+										A simple RTCDataChannel sample
+									</a>
+								</p>
+								<a href="/a_simple_rtcdatachannel_sample" class="card-link">demo page</a>
+							</div>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
