--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -90,9 +90,21 @@
 							<div class="card-body">
 								<h5 class="card-title">chat for peerjs</h5>
 								<p class="card-text">
-									Use <a href="https://peerjs.com/" target="_blank">peerjs</a> Data connections.
+									Use <a href="https://peerjs.com/" target="_blank">peerjs</a> DataConnection.
 								</p>
 								<a href="/chat_for_peerjs" class="card-link">demo page</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">call for peerjs</h5>
+								<p class="card-text">
+									Use <a href="https://peerjs.com/" target="_blank">peerjs</a> MediaConnection.
+								</p>
+								<a href="/call_for_peerjs" class="card-link">demo page</a>
 							</div>
 						</div>
 					</div>
