--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>WebRTC</title>
+	<title>WebRTC practice</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<style>
@@ -52,7 +52,7 @@
 	<main class="container">
 		<section class="my-2 container">
 			<div class="row py-lg-5">
-				<h1 class="fw-light text-center">WebRTC</h1>
+				<h1 class="fw-light text-center">WebRTC practice</h1>
 
 				<div class="row row-cols-1 row-cols-md-2 g-4">
 					<div class="col">
