--- a/webrtcapp/views/a_simple_rtcdatachannel_sample.html
+++ b/webrtcapp/views/a_simple_rtcdatachannel_sample.html
@@ -29,7 +29,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">WebRTC</a>
+			<a class="navbar-brand" href="/">WebRTC</a>
 
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav me-auto mb-2 mb-md-0">
